--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "create-typezero",
-	"version": "0.1.0",
+	"version": "0.2.2",
 	"description": "Zero-config TypeScript starter for modern Node.js development. ESM, Vitest, ESLint, Prettier. Production-ready in seconds! ⚡",
 	"main": "build/index.js",
 	"type": "module",
@@ -44,7 +44,10 @@
 		"@eslint/compat": "^1.2.4",
 		"@eslint/js": "^9.1.0",
 		"@tsconfig/node20": "^20.1.4",
+		"@types/minimist": "^1.2.5",
 		"@types/node": "^22.10.5",
+		"@types/prompts": "^2.4.9",
+		"@types/which": "^3.0.4",
 		"@vitest/coverage-v8": "^2.1.8",
 		"eslint": "^9.17.0",
 		"eslint-config-prettier": "^9.1.0",
@@ -56,8 +59,16 @@
 		"tsx": "^4.19.2",
 		"typescript": "^5.7.2",
 		"typescript-eslint": "^8.19.0",
+		"typezero": "^0.1.2",
 		"vite-tsconfig-paths": "^5.1.4",
 		"vitest": "^2.1.8"
+	},
+	"dependencies": {
+		"execa": "^9.5.2",
+		"minimist": "^1.2.8",
+		"picocolors": "^1.1.1",
+		"prompts": "^2.4.2",
+		"which": "^5.0.0"
 	},
 	"engines": {
 		"node": ">=22.0.0"
@@ -65,5 +76,10 @@
 	"volta": {
 		"node": "22.13.1",
 		"pnpm": "10.0.0"
+	},
+	"pnpm": {
+		"onlyBuiltDependencies": [
+			"esbuild"
+		]
 	}
 }
